--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <li><a href="#">Anasayfa</a></li>
           <li><a href="#">Hakkımda</a></li>
           <li><a href="#">Projelerim</a></li>
-          <li><a href="iletişim.html">Buraya tıkla </a></li>
+          <li><a href="iletisim.html">Buraya tıkla </a></li>
         </ul>
       </div>
       <div class="content">
